remove deprecated properties, deprecated calls to newInstance, remove inheritDoc from javadoc
Signed-off-by: Lukas Jungmann <lukas.jungmann@oracle.com>