@@ -158,7 +158,7 @@ class JAXBRIContextWrapper implements BindingContext {
 
     @Override
     public Object newWrapperInstace(Class<?> wrapperType)
-            throws InstantiationException, IllegalAccessException {
-        return wrapperType.newInstance();
+            throws ReflectiveOperationException {
+        return wrapperType.getConstructor().newInstance();
     }
 }
